fixed other spacing issues

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,7 @@
+#main-footer {
+    margin-top: 40px;
+}
+
 .max-view-width {
-    width: 100vw;
+    width: 99.5vw;
 }
